--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
-copyright: '&copy; Start Bootstrap'
+copyright: '&copy; medMakers'
 links:
-  - text: Creative
-    url: 'https://startbootstrap.com/themes/creative/'
+  - text: medMakers
+    url: 'https://medmakers.io'
     new_window: true
