--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Your Title Here
+title: medMakers
 description: > # this means to ignore newlines until "baseurl:"
-repository: vvalchev/creative-theme-jekyll-new
-baseurl: "/creative-theme-jekyll-new/" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
-author: Copyright &copy; 2019 - Start Bootstrap
+repository: iotm-lab/medmakers-io.github.io
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "https://medmakers.io" # the base hostname & protocol for your site
+author: Copyright &copy; 2024 - medMakers
 lang: en_US
 
 # Build settings
