--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -9,7 +9,7 @@ header:
   url: /#services
 - title: Members
   url: /#members
-- title: History
-  url: /#timeline
+# - title: History
+#   url: /#timeline
 - title: Contacts
   url: /#contacts
