--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,5 +1,5 @@
-copyright: '&copy; medMakers'
+copyright: '&copy; MedMakers'
 links:
-  - text: medMakers
+  - text: MedMakers
     url: 'https://medmakers.io'
     new_window: true
