--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: medMakers
+title: MedMakers
 description: > # this means to ignore newlines until "baseurl:"
 repository: iotm-lab/medmakers-io.github.io
 baseurl: "" # the subpath of your site, e.g. /blog/
